added licenses to maven files